--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -307,18 +307,23 @@ h3 {
 @media only screen and (max-width: 768px) {
   #menu-toggle {
    
+    nav {
+        position: relative;
+      }
     
     
       #menu-toggle {
         display: block;
         position: absolute;
-        top: 30%;
+        top: 50%;
         right: 20px;
-        transform: translateY(-30%);
+        transform: translateY(-50%);
       }
     
   }
-
+  nav ul.show {
+    display: flex;
+  }
   nav ul {
     display: none;
     flex-direction: column;
@@ -336,7 +341,7 @@ h3 {
   h3{
     font-size: 1.2em;
   }
-  h1{
+  .ho{
     font-size: 1.2em;
     margin-left: 20px;
     margin-bottom: 2opx;
