--- a/styles/home-page.css
+++ b/styles/home-page.css
@@ -249,8 +249,8 @@ h3 {
     
       #fit {
         display: flex;
-        justify-content: center;
-        padding: 10px 20px;
+  flex-direction: column;
+  align-items: center;
       }
     
     #im {
@@ -262,18 +262,20 @@ h3 {
     
     footer {
         background-color: #36454f;
-        text-align: center;
-        height: 90px;
+        
+  
+
     }
     
     footer p {
         font-size: 1.50em;
         color: white;
-        margin-top: 15px;
+        margin-top:5px;
     }
     
     #lastUpdate {
-        margin-top:5px;
+        margin-top:10px;
+        margin-bottom: 10px;
         color: wheat;
         font-size: 1rem;
         text-align: center;
