--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -247,6 +247,9 @@ footer p {
       display: none;
     }
   
+    .directory {
+        grid-template-columns: repeat(2, 1fr);
+      }
     #nav-menu {
       display: flex;
       justify-content: space-between;
@@ -257,6 +260,14 @@ footer p {
       padding: 10px 20px;
     }
   }
+  
+  @media only screen and (min-width: 320px) {
+    .directory {
+      grid-template-columns: 1fr;
+    }
+  }
+  
+ 
   
   
   
