--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -114,7 +114,10 @@ h3 {
     margin: 0;
   }
   
-  
+  #nav-menu.show-menu {
+    display: block;
+  }
+   
 
 
 
@@ -236,7 +239,12 @@ footer p {
 }
 
 
-
+@media only screen and (max-width: 767px) {
+    .directory {
+      grid-template-columns: 1fr;
+    }
+  }
+  
 
 
 
@@ -261,10 +269,15 @@ footer p {
     }
   }
   
+
+  
   @media only screen and (min-width: 320px) {
     .directory {
       grid-template-columns: 1fr;
     }
+    .hamburger {
+        display: none;
+      }
   }
   
  
@@ -276,8 +289,18 @@ footer p {
 
 @media screen and (max-width: 768px) {
 
-    
-    
+    #directory {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 1rem;
+      }
+      
+      .directory-card img {
+        width: 50%;
+        height: 50px;
+        object-fit: cover;
+        border-radius: 10px;
+      }
       .nav-toggle {
         display: block;
         background-color: #333;
