--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #ffffff;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
@@ -49,7 +50,7 @@ h3 {
  }
   
   nav {
-    background-color: #FF9800;
+    background-color: #333333;
     height: 70px;
     margin-top: -15px;
   }
