--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -238,12 +238,6 @@ footer p {
     text-align: center;
 }
 
-
-@media only screen and (max-width: 767px) {
-    .directory {
-      grid-template-columns: 1fr;
-    }
-  }
   
 
 
@@ -255,9 +249,6 @@ footer p {
       display: none;
     }
   
-    .directory {
-        grid-template-columns: repeat(2, 1fr);
-      }
     #nav-menu {
       display: flex;
       justify-content: space-between;
@@ -290,10 +281,12 @@ footer p {
   
   @media (max-width: 768px) {
     #directory {
-      grid-template-columns: repeat(2, minmax(150px 1fr));
+      grid-template-columns: repeat(2, minmax(100px 1fr));
     }
   
-      
+    h1{
+        font-size: 1em;
+    }  
       .directory-card img {
         width: 50%;
         height: 50px;
@@ -309,7 +302,15 @@ footer p {
         cursor: pointer;
       }
 
-      .social {
+      .facebook {
+        width: 70px;
+        height: 60px;
+      }
+      .twitter {
+        width: 70px;
+        height: 60px;
+      }
+      .instagram {
         width: 70px;
         height: 60px;
       }
