--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -281,7 +281,7 @@ footer p {
   
   @media (max-width: 768px) {
     #directory {
-      grid-template-columns: repeat(2, minmax(100px 1fr));
+      grid-template-columns: repeat(2, minmax(100px, 1fr));
     }
   
     h1{
