--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -42,54 +42,60 @@ h3 {
     color: #fff;
     font-size: 2em;
 }
- .nav-menu {
+ 
+
+.nav-menu {
   display: flex;
   justify-content: center;
   gap: 20px;
   list-style: none;
  }
-  
-  nav {
-    background-color: #333333;
-    height: 70px;
-    margin-top: -15px;
-  }
-  nav a {
-    color: #fff;
-    text-decoration: none;
 
-    font-size: 1.5rem;
-    margin-top: 10px;
-    text-decoration: none;
-  }
+nav {
+  background-color: #333333;
+  height: 70px;
+  margin-top: -15px;
 
-  nav a:hover {
-    background-color: #555;
-    color: #fff;
-    padding: 10px;
-    border-radius: 5px;
-    transition: background-color 0.3s ease-in-out;
-  }
-  
+}
+nav a {
+  color: #fff;
+  text-decoration: none;
 
-  .nav-menu {
-    padding-top: 15px;
-  }
-  .nav-toggle {
-    display: none;
-    position: absolute;
-    background-color: #f1f1f1;
-    min-width: 360px;
-    bottom: 40px;
-    z-index: 1;
+  font-size: 1.5rem;
+  margin-top: 10px;
+  text-decoration: none;
+}
 
-  }
-  
- 
+nav a:hover {
+  background-color: #555;
+  color: #fff;
+  padding: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s ease-in-out;
+}
 
-  nav {
-    position: relative;
-  }
+.nav-menu {
+  padding-top: 15px;
+}
+
+.nav-toggle {
+  display: none;
+  position: absolute;
+  background-color: #f1f1f1;
+  min-width: 360px;
+  bottom: 40px;
+  z-index: 1;
+
+}
+
+
+
+.nav-toggle {
+  display: none;
+}
+
+
+
   
   .hamburger {
     display: block;
@@ -281,12 +287,9 @@ footer p {
   
   @media (max-width: 768px) {
     #directory {
-      grid-template-columns: repeat(2,  1fr);
+      grid-template-columns: repeat(1,  1fr);
     }
   
-    .favicon  {
-      width: 70px;
-    }
     h1{
         font-size: 1em;
     }  
@@ -296,37 +299,41 @@ footer p {
         object-fit: cover;
         border-radius: 10px;
       }
-     
+      
       .hamburger {
         display: block;
       }
     
-      .nav-links {
+    
+      .nav-menu {
         display: none;
         flex-direction: column;
         position: absolute;
         top: 60px;
         left: 0;
         width: 100%;
-        background-color: #f9f9f9;
+        background-color: #333;
         padding: 1em;
       }
     
-      .nav-links.show {
+      .nav-menu.show {
         display: flex;
       }
     
-      .nav-links li {
+      #menu li {
         margin-right: 0;
         margin-bottom: 10px;
       }
-
+    
+    
+    
+    
     
   header{
-    display: block;
+    display: flex;
   }
     h1 {
-        font-size: 0.6em;
+        font-size: 1em;
 
     
   }
@@ -339,6 +346,14 @@ footer p {
       }
       
       
+      .favicon {
+        width: 60px;
+        height: 30px ;
+        object-fit: cover;
+        padding-left: 10px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
     
   
   
@@ -355,7 +370,10 @@ body {
     font-size: 14px;
     }
    
-    
+    .social {
+      width: 50px;
+      height: 40px;
+    }
    
     
     foot {
