--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -290,9 +290,7 @@ footer p {
       grid-template-columns: repeat(1,  1fr);
     }
   
-    h1{
-        font-size: 1em;
-    }  
+    
       .directory-card img {
         width: 50%;
         height: 50px;
@@ -309,19 +307,18 @@ footer p {
         display: none;
         flex-direction: column;
         position: absolute;
-        top: 60px;
+        top: 30px;
         left: 0;
         width: 100%;
-        background-color: #333;
+        background-color: #333333;
         padding: 1em;
       }
     
       .nav-menu.show {
-        display: flex;
+        display: block;
       }
     
-      #menu li {
-        margin-right: 0;
+      .nav-menu li {
         margin-bottom: 10px;
       }
     
@@ -331,14 +328,17 @@ footer p {
     
   header{
     display: flex;
+    gap: 20px;
   }
     h1 {
-        font-size: 1em;
+        font-size: 1.2em;
 
     
   }
     
-      
+    h3 {
+      font-size: 1.2;
+    }  
       
       main{
         width: 100%;
@@ -347,8 +347,8 @@ footer p {
       
       
       .favicon {
-        width: 60px;
-        height: 30px ;
+        width: 40px;
+        height: 20px ;
         object-fit: cover;
         padding-left: 10px;
         padding-top: 10px;
@@ -371,13 +371,13 @@ body {
     }
    
     .social {
-      width: 50px;
-      height: 40px;
+      width: 30px;
+      height: 30px;
     }
    
     
     foot {
-        height: 110px;
+        height: 90px;
 
     }
    
