--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -44,20 +44,20 @@ h3 {
 }
  
 
-.nav-menu {
+.knav-menu {
   display: flex;
   justify-content: center;
   gap: 20px;
   list-style: none;
  }
 
-nav {
+knav {
   background-color: #333333;
   height: 70px;
   margin-top: -15px;
 
 }
-nav a {
+knav a {
   color: #fff;
   text-decoration: none;
 
@@ -74,12 +74,12 @@ nav a:hover {
   transition: background-color 0.3s ease-in-out;
 }
 
-.nav-menu {
+.knav-menu {
   padding-top: 15px;
 }
 
   
-  .hamburger {
+  .khamburger {
     display: block;
     position: absolute;
     top: 10px;
@@ -87,7 +87,7 @@ nav a:hover {
     cursor: pointer;
   }
   
-  .hamburger span {
+  .khamburger span {
     display: block;
     width: 30px;
     height: 3px;
@@ -95,18 +95,47 @@ nav a:hover {
     margin-bottom: 5px;
   }
   
-  #nav-menu {
+  #knav-menu {
     display: none;
     list-style: none;
     padding: 0;
     margin: 0;
   }
   
-  #nav-menu.show-menu {
+  #knav-menu.show-menu {
     display: block;
   }
    
 
+  .navbar {
+  
+    padding: 2rem;
+    background-color: #333333;
+    color: #fff;
+}
+
+.hamburger {
+  display: none;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
+
+.nav-links {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    list-style: none;
+
+}
+
+
+
+.nav-links a {
+    padding: 1rem;
+    text-decoration: none;
+    color: #fff;
+    list-style: none;
+}
 
 
 
@@ -225,47 +254,7 @@ footer p {
     font-size: 1rem;
     text-align: center;
 }
-
-  
-
-
-
-
-
-@media only screen and (min-width: 768px) {
-    .hamburger {
-      display: none;
-    }
-  
-    #nav-menu {
-      display: flex;
-      justify-content: space-between;
-    }
-  
-    #nav-menu li {
-      border-bottom: none;
-      padding: 10px 20px;
-    }
-  }
-  
-
-  
-  @media only screen and (min-width: 320px) {
-    .directory {
-      grid-template-columns: 1fr;
-    }
-    .hamburger {
-        display: none;
-      }
-  }
-  
-  @media (max-width: 480px) {
-    #directory {
-      grid-template-columns: 1fr;
-    }
-  }
-  
-   
+ 
   
   @media (max-width: 768px) {
     #directory {
@@ -279,14 +268,41 @@ footer p {
         object-fit: cover;
         border-radius: 10px;
       }
+
+      .hamburger {
+        display: block;
+
+      }
+      .nav-links {
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        background-color: #333;
+        flex-direction: column;
+    }
+
+    .nav-links.open {
+        display: flex;
+    }
+
+    .nav-links a {
+        width: 100%;
+    }
+
+    .nav-links.open {
+      display: flex;
+      flex-direction: column;
+  }
+
       
       .hamburger {
         display: block;
-        
+
       }
     
     
-      .nav-menu {
+      .knav-menu {
         display: none;
         flex-direction: column;
         position: absolute;
@@ -297,11 +313,11 @@ footer p {
         padding: 1em;
       }
     
-      .nav-menu.show {
+      .knav-menu.show {
         display: block;
       }
     
-      .nav-menu li {
+      .knav-menu li {
         margin-bottom: 10px;
       }
 
@@ -318,8 +334,8 @@ footer p {
   }
 
   .favicon {
-    width: 40px;
-    height: 40px;
+    width: 30px;
+    height: 20px;
     margin-right: 10px;
   }
 
@@ -334,30 +350,24 @@ footer p {
         height: auto
       }
       
+    
+      .footer-container {
+        display: flex;
+        width: 100%;
+      }
+      #lastModified {
+          font-size: 1rem;
+      }
+      social img {
+      width: 20px; 
+      height: 10px;
+      text-align: center;
       
-      .favicon {
-        width: 40px;
-        height: 20px ;
-        object-fit: cover;
-        padding-left: 10px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-    }
-    
-    
+        }
+      .both-container {
+        display: block;
+      }
   
-    .footer-container {
-      flex-direction: column;
-    }
-  
-    .footer-c, .social, .footer-messages {
-      flex-basis: 100%;
-      margin-bottom: 20px;
-    }
-  
-    .social img {
-      width: 30px;
-      height: 30px;
-    }
+   
 
 }
