--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -116,7 +116,6 @@ nav a:hover {
 
 .hamburger {
   display: none;
-    font-size: 1.5rem;
     cursor: pointer;
 }
 
@@ -275,10 +274,9 @@ footer p {
       }
       .nav-links {
         position: absolute;
-        top: 100%;
+        top: 60%;
         left: 0;
         width: 100%;
-        background-color: #333;
         flex-direction: column;
     }
 
@@ -287,7 +285,7 @@ footer p {
     }
 
     .nav-links a {
-        width: 100%;
+      padding: 10px;
     }
 
     .nav-links.open {
@@ -334,9 +332,8 @@ footer p {
   }
 
   .favicon {
-    width: 30px;
-    height: 20px;
-    margin-right: 10px;
+    width: 20px;
+    margin-right: 5px;
   }
 
 
