--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -273,11 +273,13 @@ footer p {
 
       }
       .nav-links {
+        display: none;
+        flex-direction: column;
         position: absolute;
         top: 60%;
         left: 0;
         width: 100%;
-        flex-direction: column;
+        padding: 1em;
     }
 
     .nav-links.open {
@@ -288,16 +290,7 @@ footer p {
       padding: 10px;
     }
 
-    .nav-links.open {
-      display: flex;
-      flex-direction: column;
-  }
 
-      
-      .hamburger {
-        display: block;
-
-      }
     
     
       .knav-menu {
@@ -351,6 +344,7 @@ footer p {
       .footer-container {
         display: flex;
         width: 100%;
+        height: 90px;
       }
       #lastModified {
           font-size: 1rem;
