--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -108,7 +108,9 @@ nav a:hover {
    
 
   .navbar {
-  
+  display: flex;
+  justify-content: center;
+    gap: 20px;
     padding: 2rem;
     background-color: #333333;
     color: #fff;
@@ -121,9 +123,9 @@ nav a:hover {
 
 .nav-links {
     display: flex;
-    justify-content: center;
-    gap: 20px;
     list-style: none;
+    margin: 0;
+    padding: 0;
 
 }
 
@@ -134,6 +136,7 @@ nav a:hover {
     text-decoration: none;
     color: #fff;
     list-style: none;
+    font-size: 2em;
 }
 
 
@@ -320,8 +323,9 @@ footer p {
   }
     
   header {
-    flex-direction: row;
-    padding: 0.5em;
+    display: grid;
+    grid-template-columns: 1fr, 2fr;
+    gap: 10px;
   }
 
   .favicon {
