--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -283,6 +283,7 @@ footer p {
         left: 0;
         width: 100%;
         padding: 1em;
+        background-color: #008000;
     }
 
     .nav-links.open {
@@ -290,6 +291,7 @@ footer p {
     }
 
     .nav-links a {
+      font-size: 0.8em;
       padding: 10px;
     }
 
@@ -348,7 +350,6 @@ footer p {
       .footer-container {
         display: flex;
         width: 100%;
-        height: 90px;
       }
       #lastModified {
           font-size: 1rem;
