--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -289,6 +289,26 @@ header .favicon {
       .both-container {
         display: block;
       }
+
+
+      .footer-c {
+        padding-left: 10px;
+      }
+      
+    .footer-messages {
+        padding-right: 10px;
+    }
+    
+    .social {
+        margin-top: 10px;
+        padding: 10px;
+    }
+    
+    footer p {
+        font-size: 1.10em;
+        color: white;
+        padding-top: 10px;
+    }
   
       #grid-view {
         grid-template-columns: repeat(2, 1fr);
