--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -214,6 +214,8 @@ footer p {
 
       .hamburger {
         display: block;
+        width: 30px;
+        height: 30px;
 
       }
       .nav-links {
@@ -262,13 +264,9 @@ header .favicon {
 
 
     h3 {
-      font-size: 1em;
+      font-size: 1.2em;
     }  
       
-      main{
-        width: 100%;
-        height: auto
-      }
       
     footer p {
       font-size: 24px;
@@ -311,7 +309,7 @@ header .favicon {
     }
   
       #grid-view {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(1, 1fr);
         
       }
 
@@ -322,6 +320,7 @@ header .favicon {
     grid-template-columns: repeat(1fr);
     
   }
+  
  }
   
  
