--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -200,6 +200,11 @@ footer p {
  
   
   @media (max-width: 768px) {
+    #grid-view {
+      flex-basis: 30%;
+      
+    }
+
     #directory {
       grid-template-columns: repeat(1,  1fr);
     }
@@ -232,7 +237,7 @@ footer p {
     }
 
     .nav-links a {
-      font-size: 1em;
+      font-size: 1.2em;
       padding: 10px;
     }
 
@@ -308,11 +313,7 @@ header .favicon {
         padding-top: 10px;
     }
   
-      #grid-view {
-        grid-template-columns: repeat(1, 1fr);
-        
-      }
-
+      
 }
  @media (max-width: 480px){
 
