--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -182,6 +182,13 @@ main {
     padding-right: 50px;
 }
 
+.facebook, .twitter, .instagram {
+  width: 80px;
+  height: 80px;
+  object-fit: contain;
+}
+
+
 .social {
     margin-top: 10px;
     padding: 20px;
@@ -285,8 +292,8 @@ header .favicon {
       }
 
       .facebook, .twitter, .instagram {
-        width: 50px;
-        height: 25px;
+        width: 40px;
+        height: 40px;
       }
      
     
