--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -65,7 +65,7 @@ nav a:hover {
     cursor: pointer;
 }
 
-.nav-links {
+.nav-links ul{
     display: flex;
     list-style: none;
     margin: 0;
@@ -230,7 +230,7 @@ footer p {
         height: 30px;
 
       }
-      .nav-links {
+      .nav-links ul{
         display: none;
         flex-direction: column;
         top: 0;
