--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -114,7 +114,7 @@ header {
 
   }
   .hero-content p {
-    font-size: 19px;
+    font-size: 21px;
     background-color: #f2f2f2;
     padding: 20px;
     color: #0077b6;
@@ -321,11 +321,13 @@ footer p {
       padding-left: 0;
       margin-top: 10px;
     }
-
+h6 {
+    font-size: 20px;
+}
     .nav-links {
         display: none;
         position: absolute;
-        top: 60px;
+        top: 0;
         left: 0;
         background-color: #333;
         width: 100%;
@@ -358,7 +360,9 @@ footer p {
 .both-container {
     grid-template-columns: 1fr;
   }
-
+.footer-messages {
+    text-align: center;
+}
   .join-form input {
     width: 100%;
   }
@@ -367,6 +371,13 @@ footer p {
     width: 50px;
     height: 50px;
   }
+  nav a:hover {
+    background-color: #555;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease-in-out;
+  }  
 }
 .show-menu {
     display: block;
