--- a/chamber/styles/directory.css
+++ b/chamber/styles/directory.css
@@ -224,29 +224,31 @@ footer p {
         border-radius: 10px;
       }
 
-      .hamburger {
-        display: block;
-        width: 30px;
-        height: 30px;
-
-      }
-      .nav-links ul{
+      .nav-links {
         display: none;
-        flex-direction: column;
-        top: 0;
+        position: absolute;
         left: 0;
+        background-color: #333;
         width: 100%;
-        padding: 1em;
-    }
+        padding: 20px;
+      }
+    
+    
 
-    .nav-links.open {
-        display: flex;
-    }
+  .navbar {
+    display: block;
+    padding: 1rem;
+  }
 
-    .nav-links a {
-      font-size: 1.2em;
-      padding: 10px;
-    }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+
+  .nav-links ul {
+    display: block;
+  }
+
 
  
     h1 {
@@ -335,4 +337,6 @@ header .favicon {
   
  }
   
- 
+ .show-menu {
+  display: block;
+}
