--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -327,8 +327,9 @@ footer p {
         padding-bottom: 10px;
         margin-top: 10px;
       }
-    h6 {
-    font-size: 18px;
+    {
+            font-size: 1.4em;
+          }  
 }
    
 
