--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -327,10 +327,10 @@ footer p {
         padding-bottom: 10px;
         margin-top: 10px;
       }
-    {
+    h6 {
             font-size: 1.4em;
           }  
-}
+
    
 
 
