--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -94,8 +94,9 @@ header {
   
  
 .hero img {
-    width: 100%;
-    height: 500px;
+    width: 100vw;
+    height: 50%;
+    object-fit: cover;
 }
  
   
@@ -147,6 +148,11 @@ header {
     padding-bottom: 20px;
   }
   
+  .event-card img {
+    width: 450px;
+    height: auto;
+    aspect-ratio: 7784/5192;
+  }
   .events, .weather, .weather-forecast {
     background-color: #f7f7f7;
     padding: 1rem;
@@ -165,7 +171,11 @@ header {
     color: #0077b6;
   }
  
-  
+  #weather-icon {
+    width: 57px;
+    height: auto;
+    aspect-ratio: 176/154;
+  }
   .weather-forecast {
     text-align: center;
   }
@@ -328,7 +338,7 @@ footer p {
         margin-top: 10px;
       }
     h6 {
-            font-size: 1.4em;
+            font-size: 18px;
           }  
 
    
@@ -403,6 +413,26 @@ footer p {
       font-size: 1.10em;
       color: white;
       padding-top: 10px;
+  }
+
+
+  .hero-content {
+    display: block;
+    width: 100%;
+    height: auto;
+    text-align: center;
+  }
+ 
+  .hero-content p {
+    font-size: 21px;
+    background-color: #ffffff;
+    padding: 20px;
+    color: #333333;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 20px;
+    
+    
   }
 
   nav a:hover {
