--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -101,7 +101,7 @@ h6 {
  
 .hero img {
     width: 100vw;
-    height: 50%;
+    height: 80vh;
     object-fit: cover;
 }
  
@@ -339,7 +339,7 @@ footer p {
         margin-top: 10px;
       }
     header h6 {
-            font-size: 18px;
+            font-size: 1.4em;
           }  
 
    
