--- a/chamber/styles/home.css
+++ b/chamber/styles/home.css
@@ -1,7 +1,15 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+  font-family: Arial, sans-serif;
+  line-height: 1.6;
+  overflow-x: hidden;
+  background-color: #f7f7f7;
 }
 
 
